# meteo-data-api

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requests.http
alembic/versions/: bfc353d6d95f_create_temperatures_table.py
meteo/: app.py  db.py  temperatureDao.py
tests/: conftest.py  test_app.py
